Fix sj-header on mobile screens
We cannot use the percentage padding on mobile screens, since the
proportions change.

--- a/web/static/css/components/_sj-header.scss
+++ b/web/static/css/components/_sj-header.scss
@@ -12,6 +12,10 @@
     color: $color-blue;
     font-size: 48px;
     font-weight: lighter;
+
+    @media screen and (max-width: 768px) {
+      padding-top: 320px;
+    }
   }
 
   &__subtitle {
